--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="contact.html" style="color: aliceblue;" >Contact</a>
     </div><br><br><br>
     <div style="font-size: 150px;color: aquamarine;">
-        Welcome
+        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; Welcome
     </div><br style="font-size: 70vh;"></center>
 </body>
 </html>
