--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
         <a href="aboutme.html" style="color: aliceblue;">About Me</a>
         <a href="contact.html" style="color: aliceblue;" >Contact</a>
     </div><br><br><br>
-    <div style="font-size: 150px;color: aquamarine;">
-        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; Welcome
-    </div><br style="font-size: 70vh;"></center>
+    <div style="font-size: 150px;color: aquamarine;">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Welcome</div><br style="font-size: 70vh;"></center>
 </body>
 </html>
