--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     #textcss{
         height: 70px;
         width: 92%;
-        color: greenyellow;
+        color: white;
         background-color: rgb(245, 29, 90);
         border-color: black;
         border-style: solid;
@@ -53,7 +53,7 @@
 </style>
 <body>
     <center>
-    <div style="font-size: 70px;">
+    <div style="font-size: 68px;">
     <a href="index.html"  style="color: black;">Home</a>
     <a href="project.html"  style="color: black">My Achievements</a>
     <a href="aboutme.html"  style="color: black;">About Me</a>
