--- a/contact.html
+++ b/contact.html
@@ -52,6 +52,50 @@
     .fa-phone{
         background: white;
     }
+    .menucss{
+        font-weight: 900;
+        font-family:'Josefin sans',sans-serif;
+        line-height: 4vh;
+        text-align: right;
+        display: inline-flex;
+        list-style: none;
+        margin-top: -10vh;
+        margin-left: 87%;
+    }
+    .menucss a{
+        text-decoration: none;
+        color: white;
+        font-size: 3vh;
+        margin: 15px;
+    }
+    .menucss ul li:hover #shadowcss{
+        display: block;
+        position: absolute;
+        background-color: black;
+        margin-top: -15px;
+        margin-left: -270%;
+    }
+    .menucss ul li:hover #shadowcss ul
+    {
+        display: block;
+        margin: 10px;
+        list-style: none;
+    }
+    .menucss ul li:hover #shadowcss ul li
+    {
+        width: 300px;
+        padding: 10px;
+        border-bottom: 1px dotted #fff;
+        background:transparent;
+        border-radius: 0ch; 
+    }
+    .menucss ul li:hover #shadowcss ul li:last-child
+    {
+        border-bottom: none;
+    }
+    .menucss .fa{
+        margin-right: 0px;
+    }
     #shadowcss{
         text-shadow: 1px 1px 1px #919191,
         1px 2px 1px #919191,
@@ -67,22 +111,7 @@
     1px 22px 10px rgba(16,16,16,0.2),
     1px 25px 35px rgba(16,16,16,0.2),
     1px 30px 60px rgba(16,16,16,0.4);
-    }
-    #shadowcss1{
-        text-shadow: 1px 1px 1px #919191,
-        1px 2px 1px #919191,
-        1px 3px 1px #919191,
-        1px 4px 1px #919191,
-        1px 5px 1px #919191,
-        1px 6px 1px #919191,
-        1px 7px 1px #919191,
-        1px 8px 1px #919191,
-        1px 9px 1px #919191,
-        1px 10px 1px #919191,
-    1px 18px 6px rgba(16,16,16,0.4),
-    1px 22px 10px rgba(16,16,16,0.2),
-    1px 25px 35px rgba(16,16,16,0.2),
-    1px 30px 60px rgba(16,16,16,0.4);
+       display: none;
     }
     #shadowcss a{
         text-decoration: none;
@@ -90,25 +119,36 @@
     #shadowcss a:hover{
         text-shadow: none;
     }
+    @media only screen and (max-width: 700px){
+        .menucss{
+            margin-left: 65%;
+            line-height: 50px;
+        }
+        .menucss ul li:hover .hidecss{
+            margin-left: -400%
+        }
+    }
 </style>
 <body>
-    <div id="shadowcss" style="font-size: 6vh;text-align: right;font-weight: 900;">
-    <a href="index.html"  style="color: black;font-size: 3.5vh;">Home</a>
-    &#160;&#160;&#160;&#160;
-    <a href="project.html"  style="color: black;font-size: 3.5vh;">My_Achievements</a>
-    &#160;&#160;&#160;&#160;
-    <a href="aboutme.html"  style="color: black;font-size: 3.5vh;">About_Me</a>
-    &#160;&#160;&#160;&#160;
-    <a href="contact.html"  style="color: blanchedalmond;font-size: 3.5vh;">Contact</a>
+    <div class="menucss">
+        <ul><li style="position: fixed;height: 70px;"><center><a class="icon"><i class="fa fa-bars" style="color: black;"></i></a></center>
+        <div id="shadowcss">
+        <ul>
+        <li><a href="index.html"><i class="fa fa-home"></i>Home</a></li>
+        <li><a href="project.html"><i class="fa fa-trophy"></i>My_Achievements</a></li>
+        <li><a href="aboutme.html"><i class="fa fa-user"></i>About_Me</a></li>
+        <li><a href="contact.html"><i class="fa fa-phone" style="background-color: black;"></i>Contact</a></li>
+        </div></li></ul>
     </div>
     <center>
     <h1 id="textcss"><b>Contact</b></h1>
-    <p style="color: black;font-size: 3.8vh;font-weight: 900;line-height: 80px;">
-    Here are my contact details:<br><i class="material-icons" style="font-size:55px ; color: red;">mail</i>
-    Personal Email ID:- prabhashgolla2004@gmail.com;<br><i class="material-icons" style="font-size:55px ; color: red;">mail</i>
-    Institute Email ID:- prabhashgolla@kgpian.iitkgp.ac.in;<br><a href="#" class="fa fa-linkedin" ></a>
-    LinkedIn Profile:-Golla Meghanandh Manvith Prabhash;<br><a href="#" class="fa fa-facebook" ></a>Facebook Username:-Prabhash Golla;
-    <br><a href="#" class="fa fa-phone"></a>Phone Number:-9818645848.
+    <p style="color: black;font-size: 3.7vh;font-weight: 900;line-height: 80px;">
+    Here are my contact details:(click to visit)<br><a href="mailto:prabhashgolla2004@gmail.com" style="text-decoration: none;color: black;" target="_blank"><i class="material-icons" style="font-size:55px ; color: red;">mail</i>
+    Personal Email ID:- prabhashgolla2004@gmail.com;</a><br><a href="mailto:prabhashgolla@kgpian.iitkgp.ac.in" style="text-decoration: none;color: black;" target="_blank"><i class="material-icons" style="font-size:55px ; color: red;">mail</i>
+    Institute Email ID:- prabhashgolla@kgpian.iitkgp.ac.in;<br></a><a href="#" class="fa fa-linkedin" ></a>
+    <a href="https://www.linkedin.com/in/golla-meghanandh-manvith-prabhash-b643b725a" style="text-decoration: none;color: black;" target="_blank">LinkedIn Profile:-Golla Meghanandh Manvith Prabhash;</a><br><a href="#" class="fa fa-facebook" ></a>
+    <a href="https://www.facebook.com/profile.php?id=100085033546062&mibextid=ZbWKwL" style="text-decoration: none;color: black;" target="_blank">Facebook Username:-Prabhash Golla;</a>
+    <br><a href="#" class="fa fa-phone"></a>Phone Number:-9818645847.
     </p></center>
 </body>
 </html>
