--- a/aboutme.html
+++ b/aboutme.html
@@ -21,6 +21,7 @@
         background-color: rgb(251, 158, 158);
         border-color: red;
         border-style: solid;
+        width: 300px;
         border-radius: 100px;
         border-width: 10px;
         text-align: center;
@@ -70,7 +71,7 @@
         position: absolute;
         background-color: black;
         margin-top: 15px;
-        margin-left: -500%;
+        margin-left: -400%;
     }
     .menucss ul li:hover .hidecss ul
     {
