--- a/contact.html
+++ b/contact.html
@@ -131,7 +131,7 @@
 </style>
 <body>
     <div class="menucss">
-        <ul><li style="position: fixed;height: 70px;"><center><a class="icon"><i class="fa fa-bars" style="color: black;"></i></a></center>
+        <ul><li style="position: fixed;background-color:black;height: 70px;"><center><a class="icon"><i class="fa fa-bars" style="color: white;"></i></a></center>
         <div id="shadowcss">
         <ul>
         <li><a href="index.html"><i class="fa fa-home"></i>Home</a></li>
